# lexactivator-android

./: .gitignore  README.md  THIRD-PARTY-NOTICES.txt  THIRD_PARTY_NOTICES.txt  build.gradle  download-libs.sh  gradle.properties  pre-build.sh  settings.gradle
.github/workflows/: maven_publish.yml  publish.yml  publish_to_stage.yml  testPublish.yml  update-version.yml
examples/: settings.gradle
examples/app/: build.gradle
examples/app/src/main/: AndroidManifest.xml
examples/app/src/main/res/layout/: activity_main.xml
examples/gradle/wrapper/: gradle-wrapper.properties
examples/java/: build.gradle  settings.gradle
examples/java/app/src/main/: AndroidManifest.xml
examples/java/app/src/main/res/layout/: activity_main.xml
examples/java/app/src/main/res/values/: themes.xml
examples/lexactivator-release/: build.gradle
examples/native/: README.md  build.gradle  download-libs.sh  settings.gradle
examples/native/app/: .gitignore  build.gradle
examples/native/app/src/main/: AndroidManifest.xml
examples/native/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
examples/native/app/src/main/cpp/lexactivator/include/: LexActivator.h  LexStatusCodes.h
examples/native/app/src/main/res/values/: themes.xml
examples/native/app/src/main/res/values-night/: themes.xml
examples/sample/: build.gradle  settings.gradle
examples/sample/app/: build.gradle
examples/sample/app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lexactivator/: build.gradle  maven-central.gradle
lexactivator/src/main/: AndroidManifest.xml
(+28 files in other folders)
